deployment/backend.yaml
---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: medscloud-backend
   labels:
      app.kubernetes.io/name: medscloud-backend
      release: backend-latest
 spec:
   replicas: 3
   selector:
     matchLabels:
       release: backend-latest
   template:
     metadata:
       labels:
         app.kubernetes.io/name: medscloud-backend
         release: backend-latest
     spec:
       containers:
         - name: meds-cloud
           image: meds_cloud:backend-latest
           imagePullPolicy: Never
           command: []
           ports:
             - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: medscloud-backend-service
spec:
  selector:
    app.kubernetes.io/name: medscloud-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
