deployment/frontend.yaml
---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: medscloud-frontend
   labels:
      app.kubernetes.io/name: medscloud-frontend
      release: frontend-latest
 spec:
   replicas: 3
   selector:
     matchLabels:
       release: frontend-latest
   template:
     metadata:
       labels:
         app.kubernetes.io/name: medscloud-frontend
         release: frontend-latest
     spec:
       containers:
         - name: meds-cloud
           imagePullPolicy: Always
           image: zottelsheep/meds_cloud:frontend-latest
           command: []
           ports:
             - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: medscloud-frontend-service
spec:
  selector:
    app.kubernetes.io/name: medscloud-frontend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
